--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -424,7 +424,7 @@ footer.footer .footer-bottom {
 
     /* 2. Reducir el logo en móviles para que no choque con la hamburguesa */
     .logo {
-        max-height: 80px !important; /* Mucho más manejable en cel */
+        max-height: 55px !important; /* Mucho más manejable en cel */
     }
 
     /* 3. Ajustar la altura de la navbar en móvil */
@@ -449,10 +449,6 @@ footer.footer .footer-bottom {
 }
 
 /* Arreglo extra para la hamburguesa (el icono) que a veces se ve azul o invisible */
-.navbar-toggler {
-    border-color: rgba(255,255,255,0.5) !important;
-}
-
 .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3 baseProfile='full'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important;
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important;
 }
